hotfix-mail-cleaner
add hotfix to red color in the mail list
add hotfix to change proximo for next

--- a/static_files/admin/css/admin_styles.css
+++ b/static_files/admin/css/admin_styles.css
@@ -1,5 +1,5 @@
 /* Estilos para resaltar el campo "status" */
-.field-proximo [value="Estamos atrasados"] {
+.field-proximo [value="We are late"] {
     border: #FF0000; /* Color rojo para el valor "inactivo" */
 }
 
